gcc/testsuite/rust/rustc/ui/attributes/validation-on-associated-items-issue-121537_dg.rs
trait MyTrait {
    #[doc = MyTrait]
// { dg-error "" "" { target *-*-* } .-1 }
    fn myfun();
}

fn main() {}

